--- a/src/ForServer/compilerconfig.json
+++ b/src/ForServer/compilerconfig.json
@@ -1,7 +1,6 @@
 ﻿[
   {
-    "outputFile": "./wwwroot/css/site.css",
-    "inputFile": "Web/css/site.less",
-    "sourceMap": true
+    "outputFile": "wwwroot/css/forServer.css",
+    "inputFile": "Web/css/forServer.less"
   }
 ]
