--- a/src/ForServer/appsettings.json
+++ b/src/ForServer/appsettings.json
@@ -4,6 +4,17 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "File": {
+      "Path": "app_data/app.logs",
+      "Append": true,
+      "FileSizeLimitBytes": 200000,
+      "MaxRollingFiles": 5
+    },
+    "MemoryLogger": {
+      "LogLevel": {
+        "Default": "Trace"
+      } 
     }
   },
   "AllowedHosts": "*"
