--- a/src/kwd.BoxOBlazor/Web/scripts/util/tsconfig.json
+++ b/src/kwd.BoxOBlazor/Web/scripts/util/tsconfig.json
@@ -4,6 +4,7 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
+    "inlineSources": true,
     "target": "ESNext",
     "module": "None",
     "outDir": "../../../wwwroot/",
