--- a/src/ForServer/ForServer.csproj
+++ b/src/ForServer/ForServer.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -21,10 +25,5 @@
 		<Content Remove="compilerconfig.json" />
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="App_Data\" />
-	  <Folder Include="Controllers\" />
-	</ItemGroup>
-
+	
 </Project>
