TRy fix publish including unwanted tsconfig.json

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,9 @@
 
 /src/ForServer/wwwroot/*
 /src/ForServer/App_Data/*
+/src/ForServer/Properties/PublishProfiles/
+/src/ForServer/.config/
 
 /src/kwd.BoxOBlazor/wwwroot/*
+/src/kwd.BoxOBlazor/Web/scripts/util/*.js
+/src/kwd.BoxOBlazor/Web/scripts/util/*.js.map
