--- a/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
+++ b/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
@@ -20,13 +20,6 @@
     <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
 	</ItemGroup>
 
-
-	<ItemGroup>
-    <Content Update="Web\scripts\util\tsconfig.json">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
 	<ItemGroup>
 		<!--Dont copy to out folder.-->
 		<Content Remove="compilerconfig.json" />
@@ -34,12 +27,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <WebAsset Remove="Web\img\log.svg" />
+    <Content Update="Web\scripts\util\tsconfig.json">
+      <Pack>false</Pack>
+	  </Content>
 	</ItemGroup>
-
-	<ItemGroup>
-	  <WebAsset Remove="Web\css\site\circuitError.less" />
-	</ItemGroup>
-
 
 </Project>
