--- a/src/ForServer/appsettings.json
+++ b/src/ForServer/appsettings.json
@@ -14,8 +14,12 @@
     "MemoryLogger": {
       "LogLevel": {
         "Default": "Trace"
-      } 
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SiteConfig": {
+    "ForBrowserSite": "https://localhost:44353/"
+  }
 }
