--- a/src/ForBrowser/wwwroot/appsettings.json
+++ b/src/ForBrowser/wwwroot/appsettings.json
@@ -8,5 +8,9 @@
 
   "Title": "BagOBlazor For Browser",
   "Host": "Browser",
-  "DemoServer": "https://localhost:44381/"
+  "DemoServer": "https://localhost:44381/",
+
+  "SiteConfig": {
+    "ForServerSite": "https://localhost:44381/"
+  } 
 }
