--- a/src/ForBrowser/appsettings.json
+++ b/src/ForBrowser/appsettings.json
@@ -11,6 +11,7 @@
   "DemoServer": "https://localhost:44381/",
 
   "SiteConfig": {
+    //the demo server
     "ForServerSite": "https://localhost:44381/"
   } 
 }
