Outline of service for local storage.

--- a/src/kwd.BoxOBlazor/Web/scripts/util/tsconfig.json
+++ b/src/kwd.BoxOBlazor/Web/scripts/util/tsconfig.json
@@ -10,6 +10,6 @@
     "outDir": "../../../wwwroot/",
     "outFile": "../../../wwwroot/util.js"
   },
-  "files": ["Prompt.ts"],
+  "files": [ "Prompt.ts", "LocalStorage.ts" ],
   "compileOnSave": true
 }
