--- a/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
+++ b/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup>
 		<!--Dont copy to out folder.-->
 		<Content Remove="compilerconfig.json" />
+		<None Remove="Web\scripts\util\LocalStorage.ts" />
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
 
