--- a/src/ForBrowser/ForBrowser.csproj
+++ b/src/ForBrowser/ForBrowser.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-preview4.20210.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-preview4.20210.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview4.20210.8" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0-preview5.20210.3" />
   </ItemGroup>
 
@@ -21,15 +25,11 @@
 		<Content Remove="compilerconfig.json" />
     <None Include="compilerconfig.json" />
 		<Content Remove="wwwroot\appsettings.Development.json" />
-    <None Include="wwwroot\appsettings.Development.json" />
+		<None Include="wwwroot\appsettings.Development.json" />
 	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
   
 </Project>
