Add payload to js local storage events.
Update to blazor wasm rc1.

--- a/src/ForBrowser/appsettings.json
+++ b/src/ForBrowser/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
 
-  "Title": "BagOBlazor For Browser",
+  "Title": "BoxOBlazor For Browser",
   "Host": "Browser",
   "DemoServer": "https://localhost:44381/",
 
