--- a/src/ForBrowser/ForBrowser.csproj
+++ b/src/ForBrowser/ForBrowser.csproj
@@ -28,8 +28,9 @@
 		<None Include="wwwroot\appsettings.Development.json" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\kwd.BoxOBlazor.Demo\kwd.BoxOBlazor.Demo.csproj" />
+	  <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
+	</ItemGroup>
   
 </Project>
