--- a/src/ForDesk/ForDesk.csproj
+++ b/src/ForDesk/ForDesk.csproj
@@ -19,9 +19,11 @@
 		<None Include="compilerconfig.json" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\ForBrowser\ForBrowser.csproj" />
+	  <ProjectReference Include="..\kwd.BoxOBlazor.Demo\kwd.BoxOBlazor.Demo.csproj" />
+	  <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
+	</ItemGroup>
 
   <ItemGroup>
     <Content Update="wwwroot\**">
