--- a/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
+++ b/src/kwd.BoxOBlazor/kwd.BoxOBlazor.csproj
@@ -3,35 +3,21 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
-	<ItemGroup>
-    <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<!--Dont copy to out folder.-->
-		<Content Remove="compilerconfig.json" />
-		<None Remove="Web\scripts\util\EnrichError.ts" />
-		<None Remove="Web\scripts\util\LocalStorage.ts" />
-		<None Include="compilerconfig.json" />
-	</ItemGroup>
-
-	<ItemGroup>
-    <Content Update="Web\scripts\util\tsconfig.json">
-      <Pack>false</Pack>
-	  </Content>
-	</ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="Parts\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+  
 </Project>
