--- a/src/kwd.BoxOBlazor.Demo/Web/scripts/util/tsconfig.json
+++ b/src/kwd.BoxOBlazor.Demo/Web/scripts/util/tsconfig.json
@@ -10,6 +10,6 @@
     "outDir": "../../../wwwroot/",
     "outFile": "../../../wwwroot/util.js"
   },
-  "files": [ "Prompt.ts", "LocalStorage.ts" ],
+  "files": [ "util.ts"],
   "compileOnSave": true
 }
