Moved UITimer and AlarmClock to shared demo project.

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /src/ForServer/Properties/PublishProfiles/
 
 /src/ForBrowser/wwwroot/*
-/src/ForServer/Properties/PublishProfiles/
-!/src/ForServer/Properties/PublishProfiles/Local.pubxml
+/src/ForBrowser/Properties/PublishProfiles*
+!/src/ForBrowser/Properties/PublishProfiles/Local.pubxml
 
 /src/ForDesk/wwwroot/_content/*
