--- a/src/ForServer/appsettings.json
+++ b/src/ForServer/appsettings.json
@@ -31,6 +31,6 @@
     "ForBrowserSite": "https://localhost:44381/wasm",
 
     //Local file path to WASM version (leave empty if not hosted by this site).
-    "WasmFileRoot": "../ForBrowser/bin/pub/wwwroot"
+    "WasmFileRoot": "../ForBrowser/pub/wwwroot"
   }
 }
