--- a/src/ForBrowser/ForBrowser.csproj
+++ b/src/ForBrowser/ForBrowser.csproj
@@ -7,6 +7,12 @@
     <!--Generate assets as a js file-->
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug' ">
+    <!--Publish on build ( for debug)-->
+    <DeployOnBuild>true</DeployOnBuild>
+    <publishProfile>Local</publishProfile>
+  </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
