--- a/src/ForBrowser/Web/manifest.json
+++ b/src/ForBrowser/Web/manifest.json
@@ -11,6 +11,11 @@
       "src": "favicon.svg",
       "type": "image/svg",
       "sizes": "512x512"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
