--- a/src/BlazorStamp/Properties/launchSettings.json
+++ b/src/BlazorStamp/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "WasmStamp": {
       "commandName": "Project",
+      "commandLineArgs": "--TargetPath=../ForBrowser/pub/wwwroot --BaseURL=\"wasm\"",
       "workingDirectory": "./"
     }
   }
