--- a/src/BlazorStamp/BlazorStamp.csproj
+++ b/src/BlazorStamp/BlazorStamp.csproj
@@ -3,12 +3,31 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackAsTool>true</PackAsTool>
+    <PackageOutputPath>./pub</PackageOutputPath>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
-  
+  <PropertyGroup>
+    <Version>0.0.3</Version>
+    <Authors>Derek Kowald</Authors>
+    <Product>KWD Blazor Stamp</Product>
+    <Title>Blazor Stamp</Title>
+    <Description>A tool to help update a packages blazor wasm app</Description>
+    <PackageProjectUrl>https://github.com/Dkowald/kwd.BoxOBlazor</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Dkowald/kwd.BoxOBlazor.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Tags>Utility;blazor;wasm;integrity hash</Tags>
+    <PackageReleaseNotes>
+      ## Initial (alpha)
+      Tool to update base element in html document. 
+      And re-calculate integrity hash's for blazor wasm worker assets.
+    </PackageReleaseNotes>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Include="icon.png" Pack="true" PackagePath="\" />
+    <None Include="blazorStamp.svg" Pack="false" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +40,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all">
       <ExcludeAssets>build</ExcludeAssets>
       <GeneratePathProperty>true</GeneratePathProperty>
+    </PackageReference>
+
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
