Add copy to clipboard.
Remove not-so-useful JsProxy class.

--- a/src/ForBrowser/Directory.Build.targets
+++ b/src/ForBrowser/Directory.Build.targets
@@ -1,6 +1,6 @@
 <Project>
   <ItemGroup>
-    <WebAsset Include="Web/SetHeader.nginx">
+    <WebAsset Include="Web/SetHeader.nginx.txt">
       <Out>wwwroot/%(Filename)%(Extension)</Out>
     </WebAsset>
 
