--- a/src/ForServer/appsettings.json
+++ b/src/ForServer/appsettings.json
@@ -23,14 +23,7 @@
   "AllowedHosts": "*",
 
   "SiteConfig": {
-    //Setup for local:
-    // Use the local publish path to generate the WASM assets.
-    // these settings will serve the assets from this site.
-
     //Url to the WASM version
-    "ForBrowserSite": "https://localhost:44381/wasm",
-
-    //Local file path to WASM version (leave empty if not hosted by this site).
-    "WasmFileRoot": ""
+    "ForBrowserSite": "https://localhost:44353/"
   }
 }
