--- a/src/ForBrowser.Host/Properties/launchSettings.json
+++ b/src/ForBrowser.Host/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52430",
-      "sslPort": 44381
+      "applicationUrl": "http://localhost:57909",
+      "sslPort": 44377
     }
   },
   "profiles": {
@@ -15,12 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ForServer": {
+    "ForBrowser.Host": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Docker": {
