--- a/src/ForServer/ForServer.csproj
+++ b/src/ForServer/ForServer.csproj
@@ -1,15 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>7986b84d-209e-4262-9671-48338f53c55f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
+    <PackageReference Include="kwd.CoreUtil" Version="1.1.0" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.9.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,20 +22,9 @@
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
-	<ItemGroup>
-    <!--Dont copy to out folder.-->
-		<Content Remove="compilerconfig.json" />
-		<_ContentIncludedByDefault Remove="wwwroot\css\tiles.css" />
-		<None Include="compilerconfig.json" />
-	</ItemGroup>
-
-	<ItemGroup>
+  <ItemGroup>
 	  <ProjectReference Include="..\kwd.BoxOBlazor.Demo\kwd.BoxOBlazor.Demo.csproj" />
 	  <ProjectReference Include="..\kwd.BoxOBlazor\kwd.BoxOBlazor.csproj" />
-
-    <!--Include project (for build); but no assem reference-->
-    <ProjectReference Include="..\BlazorStamp\BlazorStamp.csproj" ReferenceOutputAssembly="false" />
-    
 	</ItemGroup>
-	
+  
 </Project>
