--- a/src/kwd.BoxOBlazor.Demo/Directory.Build.targets
+++ b/src/kwd.BoxOBlazor.Demo/Directory.Build.targets
@@ -16,18 +16,29 @@
 			<Out>wwwroot/css/open-iconic/%(RecursiveDir)/%(Filename)%(Extension)</Out>
 		</WebAsset>
 
-		<!--For source map support.-->
-		<WebAsset Include="Web/css/site.less" 
-		          Out="wwwroot/css/site.less" />
-			
-		<WebAsset Include="Web/css/site/**/**">
-			<Out>wwwroot/css/site/%(RecursiveDir)/%(Filename)%(Extension)</Out>
-		</WebAsset>
-
 	</ItemGroup>
 
   <Target Name="WebAssets" Inputs="@(WebAsset)" Outputs="%(WebAsset -> WebAsset.Out)" 
           BeforeTargets="ResolveAssemblyReferences">
 		<Copy SourceFiles="%(WebAsset.FullPath)" DestinationFiles="%(Out)" />
 	</Target>
+
+  <Target Name="RestoreLocalTools" AfterTargets="BeforeBuild">
+    <Exec Command="dotnet tool restore" StandardOutputImportance="High" />
+  </Target>
+
+  <ItemGroup>
+    <WebCompile Include="Web/css/site.scss" Out="wwwroot/css/site.css" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <WebCompilerConfig>webcompiler.json</WebCompilerConfig>
+    <WebCompilerConfig  Condition="'$(Configuration)' == 'Release'">webcompiler.Release.json</WebCompilerConfig>
+  </PropertyGroup>
+
+  <Target Name="RunWebCompile" AfterTargets="RestoreLocalTools" Inputs="@(WebCompile);$(WebCompilerConfig)" Outputs="%(Out)">
+    <Message Importance="High" Text="Running webcompiler tool"/>
+    <Exec Command="dotnet tool run webcompiler %(WebCompile.Identity) -c $(WebCompilerConfig)" 
+          StandardOutputImportance="High" StandardErrorImportance="High" />
+  </Target>
 </Project>
