--- a/src/kwd.BoxOBlazor.Demo/kwd.BoxOBlazor.Demo.csproj
+++ b/src/kwd.BoxOBlazor.Demo/kwd.BoxOBlazor.Demo.csproj
@@ -1,33 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
 	  <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
 	<ItemGroup>
-    <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<!--Dont copy to out folder.-->
-		<Content Remove="compilerconfig.json" />
 		<None Remove="Web\scripts\util\Clipboard.ts" />
 		<None Remove="Web\scripts\util\EnrichError.ts" />
 		<None Remove="Web\scripts\util\LocalStorage.ts" />
 		<None Remove="Web\scripts\util\util.ts" />
-		<None Include="compilerconfig.json" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -37,6 +31,7 @@
 	<ItemGroup>
     <Content Update="Web\scripts\util\tsconfig.json">
       <Pack>false</Pack>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </Content>
 	</ItemGroup>
 </Project>
