--- a/src/kwd.BoxOBlazor.Browser.Host/appsettings.json
+++ b/src/kwd.BoxOBlazor.Browser.Host/appsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "kwd.BoxOBlazor": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
