--- a/src/kwd.BoxOBlazor.Server/Properties/launchSettings.json
+++ b/src/kwd.BoxOBlazor.Server/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52430",
-      "sslPort": 44381
+      "applicationUrl": "http://localhost:57908",
+      "sslPort": 44378
     }
   },
   "profiles": {
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Logging__LogLevel__Default" :  "Debug" 
       }
     },
     "ForServer": {
