--- a/src/kwd.BoxOBlazor.Server/appsettings.json
+++ b/src/kwd.BoxOBlazor.Server/appsettings.json
@@ -5,6 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "kwd.BoxOBlazor": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
