--- a/src/kwd.BoxOBlazor.Hosting/kwd.BoxOBlazor.Hosting.csproj
+++ b/src/kwd.BoxOBlazor.Hosting/kwd.BoxOBlazor.Hosting.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="kwd.CoreUtil" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Config\" />
+    <Folder Include="Middleware\" />
+    <Folder Include="Util\" />
+  </ItemGroup>
+
 </Project>
